Added version checker
* The tool now shows you when new  updates are available for the tool

--- a/options/options.css
+++ b/options/options.css
@@ -129,3 +129,11 @@ fieldset:has(> .tooltip:hover) {
     position: absolute;
     bottom: 5px;
 }
+
+#updateText {
+    position: absolute;
+    
+    bottom: 45px;
+    left: 50%;
+    transform: translateX(-50%);
+}
